<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.v7.widget.CardView
        android:id="@+id/myCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin"
                android:layout_marginTop="@dimen/layout_margin"
                android:layout_marginRight="@dimen/layout_margin"
                android:layout_marginBottom="@dimen/layout_margin"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/layout_margin"
                    android:orientation="vertical"
                    android:weightSum="4">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Name"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_margin"
                        android:text="@string/Order"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_margin"
                        android:text="@string/Quantity"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_margin"
                        android:text="@string/Price"
                        android:textColor="@color/colorBlack" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/layout_margin"
                    android:orientation="vertical"
                    android:weightSum="4">

                    <TextView
                        android:id="@+id/displayName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":"
                        android:textColor="@color/colorGray" />

                    <TextView
                        android:id="@+id/displayOrder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_margin"
                        android:text=":"
                        android:textColor="@color/colorGray" />

                    <TextView
                        android:id="@+id/displayQuantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_margin"
                        android:text=":"
                        android:textColor="@color/colorGray" />

                    <TextView
                        android:id="@+id/displayPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_margin"
                        android:text=":"
                        android:textColor="@color/colorGray" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="@dimen/layout_margin"
                android:layout_marginTop="@dimen/layout_margin"
                android:layout_marginRight="@dimen/layout_margin"
                android:background="@color/colorGray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_margin"
                android:layout_marginRight="@dimen/layout_margin">

                <ImageButton
                    android:id="@+id/imageBtnDelete"
                    style="?attr/actionModeCloseButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/imageBtnSend"
                    android:src="@drawable/ic_delete" />

                <ImageButton
                    android:id="@+id/imageBtnSend"
                    style="?attr/actionModeCloseButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_send" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>